--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "20": "^3.1.9",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "axios": "^1.10.0",
     "mobx": "^6.13.7",
